--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>my second git repository</title>
 </head>
 <body>
-    
+    <h1>I can push to github</h1>
+    <h2>Mama i can code now</h2>
+    <h3>now i can coding</h3>
 </body>
 </html>
