--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <img src="rose jpg" alt="gulap ful">
     <h1>I can push to github</h1>
     <p>i was feeling good.so i still working.</p>
-    <P>KOL KOL KORE PANI JAI</P>
+    <P>KOL KOL KORE PANI JAI.nodi boie jai du choke gupone</P>
     <h2>Mama i can code now</h2>
     <h3>now i can coding</h3>
 </body>
