--- a/index.html
+++ b/index.html
@@ -8,11 +8,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <img src="rose jpg" alt="gulap ful">
-    <h1>I can push to github</h1>
+    <img src="girl.gpg" alt="cut girl">
+    <h1>I can push to github.so hard working</h1>
     <p>i was feeling good.so i still working.</p>
+    <img src="rose.jpg" alt="rosiful high way">
     <P>KOL KOL KORE PANI JAI.nodi boie jai du choke gupone</P>
-    <h2>Mama i can code now</h2>
-    <h3>now i can coding</h3>
+    <h2>Mama i can code now no no i can do it</h2>
+    <h3>now i can coding so i hard working</h3>
+    <p>now i am fine are you okey</p>
 </body>
 </html>
