--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <img src="girl.gpg" alt="cut girl">
+    <img src="girl.jpg" alt="cut girl">
     <h1>I can push to github.so hard working</h1>
     <p>i was feeling good.so i still working.</p>
     <img src="rose.jpg" alt="rosiful high way">
